--- a/Reg/Makefile
+++ b/Reg/Makefile
@@ -1,10 +1,13 @@
-BINFILES=TestReg
+BINFILES=TestReg Smallcheck
 PDFLATEX=pdflatex -interaction=batchmode
 
 test: TestReg
 	./TestReg
 
 TestReg: TestReg.hs Reg.hs RegExtra.hs Mon.hs
+	ghc -O2 --make $@
+
+Smallcheck: Smallcheck.hs Reg.hs RegExtra.hs Mon.hs
 	ghc -O2 --make $@
 
 %.tex: %.md
