Reg/Makefile: test runs Smallcheck too

--- a/Reg/Makefile
+++ b/Reg/Makefile
@@ -1,8 +1,9 @@
 BINFILES=TestReg Smallcheck
 PDFLATEX=pdflatex -interaction=batchmode
 
-test: TestReg
+test: TestReg Smallcheck
 	./TestReg
+	./Smallcheck
 
 TestReg: TestReg.hs Reg.hs RegExtra.hs Mon.hs
 	ghc -O2 --make $@
