--- a/TH/Projections/Makefile
+++ b/TH/Projections/Makefile
@@ -12,4 +12,4 @@ declare3: Declare3.hs Build3.hs
 	ghc -o $@ --make Declare3.hs
 
 clean:
-	-rm -f *.hi *.o $(BINFILES)
+	-rm -f *.hi *.o *.dyn_hi *.dyn_o $(BINFILES)
